# the-book

./: Cargo.toml  README.md
notes/: 10.md  11_writing_automated_tests.md  13_iterators_and_closures.md  1_getting_started.md  2_programming_a_guessing_game.md  3.md  4_understanding_ownership.md  5.md  6_enums_and_pattern_matching.md  7_managing_growing_project.md  8_common_collections.md  9_error_handling.md
projects/11/adder/src/: lib.rs
projects/12/minigrep/src/: lib.rs  main.rs
projects/8/employee_departments/: Cargo.toml
projects/8/employee_departments/src/: main.rs
projects/8/mean_med_mode/: Cargo.toml
projects/8/mean_med_mode/src/: main.rs
projects/8/pig_latin/src/: main.rs
projects/branches/src/: main.rs
projects/loops/src/: main.rs
projects/rectangles/src/: main.rs
projects/restaurant/src/: lib.rs
